# hterm-next

./: .gitignore  LICENSE  README.md  pack.py  pyproject.toml
.github/workflows/: release.yaml
hterm/: channel_local.py  channel_pty.py  channel_serial.py  channel_ssh.py  config.py  main.py  profile.py  quick.py  session.py  session_list.py  terminal.py  tty_channel.py  types.py
hterm/channel/: __init__.py  channel_local.py  channel_pty.py  channel_serial.py  channel_ssh.py
hterm/ui/: __init__.py  main_window.py  quick_bar.py  quick_dialog.py  session_list.py
scripts/: convert_theme.py  hook.py  release.py
src/hterm/: main.py  session.py  terminal.py  utils.py
src/hterm/channel/: channel_local.py  channel_serial.py
src/hterm/ui/: about_dialog.py  main_window.py  session_dialog.py  session_list.py
