[project]
name = "hterm-next"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "paramiko>=4.0.0",
    "pyserial>=3.5",
    "pyside6>=6.10.1",
    "pyte",
    "pywinpty>=3.0.2 ; sys_platform == 'win32'",
    "qtawesome>=1.4.0",
    "tomli-w>=1.2.0",
]

[tool.uv.sources]
pyte = { url = "https://github.com/lbhzy/pyte/archive/refs/heads/master.zip" }

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
