[project]
name = "hterm"
version = "0.1.7"
description = "A terminal software"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "paramiko>=4.0.0",
    "pyserial>=3.5",
    "pyside6>=6.10.1",
    "pyte",
    "pywinpty>=3.0.2 ; sys_platform == 'win32'",
    "qtawesome>=1.4.0",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "pillow>=12.0.0",
    "pyinstaller>=6.17.0",
]

[project.scripts]
hterm = "hterm.main:main"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
# I (isort) 和 UP (语法升级)
extend-select = ["I", "UP"]

[tool.uv.sources]
pyte = { git = "https://github.com/lbhzy/pyte.git", rev = "082137e0076e8ba4487d0bdcfe92f5e6c9abbd4b" }
